# utilization-management-claims-analytics

./: .gitignore  README.md  pyproject.toml
.speckit/: constitution.md  plan.md  specification_poc.md  specification_prod.md  specifications.md  tasks.md
docs/: cpt_linkage_validation.md  secure_web_policy_ingestion.md  solution_architecture.md
output_test/: appeals_report.json  benchmark_report.json  enriched_claims.parquet  flags.json  policy_impact.json  provider_features.parquet  raw_claims.parquet  report.md  service_category_features.parquet  temporal_features.parquet  validation_report.json
src/um_claims/: __init__.py  appeals.py  benchmarking.py  cli.py  config.py  detection.py  features.py  generate_data.py  ingest.py  policy_seeds.py  policy_sim.py  reporting.py  schema.py  validate.py
src/um_claims/analytics/: policy_kpis.py
src/um_claims/io/: __init__.py  kaggle_loader.py  kaggle_schema_adapter.py
src/um_claims/policy/: __init__.py  generate_policy_md.py  match_claims.py  parse_policy_md.py
tests/: conftest.py  test_appeals.py  test_benchmarking.py  test_config.py  test_detection.py  test_features.py  test_generate_data.py  test_generate_policy_md.py  test_kaggle_loader.py  test_match_claims.py  test_parse_policy_md.py  test_policy_kpis.py  test_policy_seeds.py  test_policy_sim.py  test_reporting.py  test_schema.py  test_validate.py
